refactor: remove unnecessary (un)boxing of primitives